--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,10 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/google/playhvz",
   "devDependencies": {
+    "@firebase/firestore-types": "^1.13.0",
     "bower": "^1.8.0",
+    "firebase": "^7.21.0",
     "firebase-tools": "^8.10.0"
-  }
+  },
+  "dependencies": {}
 }
