Update git ignore for android

--- a/Android/ghvzApp/.gitignore
+++ b/Android/ghvzApp/.gitignore
@@ -4,6 +4,8 @@
 .idea
 .navigation
 output.json
+.idea/codeStyles
+.idea/modules.xml
 /.idea/workspace.xml
 /.idea/usage.statistics.xml
 /.idea/tasks.xml
