--- a/web/package.json
+++ b/web/package.json
@@ -24,5 +24,7 @@
     "firebase": "^7.21.0",
     "firebase-tools": "^8.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@polymer/app-layout": "^3.1.0"
+  }
 }
