--- a/firebaseFunctions/firebase.json
+++ b/firebaseFunctions/firebase.json
@@ -15,6 +15,13 @@
     },
     "ui": {
       "enabled": true
+    },
+    "auth": {
+      "port": 9099
     }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
