--- a/firebaseFunctions/functions/package.json
+++ b/firebaseFunctions/functions/package.json
@@ -1,9 +1,10 @@
 {
   "name": "functions",
+  "type": "module",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "serve": "npm run build && firebase emulators:start --only functions,firestore,auth",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -13,7 +14,7 @@
   "engines": {
     "node": "10"
   },
-  "main": "lib/index.js",
+  "main": "src/index.ts",
   "dependencies": {
     "@types/chai-as-promised": "^7.1.3",
     "@types/node": "^14.10.1",
