--- a/web/package.json
+++ b/web/package.json
@@ -7,9 +7,11 @@
     "Chewy Shaw"
   ],
   "scripts": {
+    "lint": "tslint --project tsconfig.json",
+    "build": "tsc --build ../firebaseFunctions/functions/tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "firebase serve",
-    "deploy": "firebase-bolt database.rules.bolt && firebase deploy",
+    "start": "npm run build && firebase emulators:start --only hosting",
+    "deploy-deprecated": "firebase-bolt database.rules.bolt && firebase deploy",
     "deploy-rules": "firebase-bolt database.rules.bolt && firebase deploy --only database"
   },
   "repository": {
@@ -19,12 +21,14 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/google/playhvz",
   "devDependencies": {
-    "@firebase/firestore-types": "^1.13.0",
-    "bower": "^1.8.8",
-    "firebase": "^7.21.0",
-    "firebase-tools": "^8.10.0"
+    "@firebase/firestore-types": "^1.14.0",
+    "bower": "^1.8.12",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@polymer/app-layout": "^3.1.0"
+    "@polymer/app-layout": "^3.1.0",
+    "firebase": "^7.24.0",
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2"
   }
 }
