Change web from fake to using firestore emulator
Changes web's fake server over to using the firestore emulator instead of the fake server. This change is still mid-migration. Chat works, but we need to get missions, rewards, etc working again.

--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint --project tsconfig.json",
     "build": "tsc --build ../firebaseFunctions/functions/tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && firebase emulators:start --only hosting",
+    "serve": "npm run build && firebase emulators:start --only hosting",
     "deploy-deprecated": "firebase-bolt database.rules.bolt && firebase deploy",
     "deploy-rules": "firebase-bolt database.rules.bolt && firebase deploy --only database"
   },
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@polymer/app-layout": "^3.1.0",
-    "firebase": "^7.24.0",
+    "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2"
   }
