--- a/firebaseFunctions/functions/package.json
+++ b/firebaseFunctions/functions/package.json
@@ -1,6 +1,5 @@
 {
   "name": "functions",
-  "type": "module",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
@@ -12,14 +11,15 @@
     "test": "mocha --require ts-node/register --colors ./test/**/*.test.ts --recursive"
   },
   "engines": {
-    "node": "10"
+    "node": "12"
   },
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "dependencies": {
     "@types/chai-as-promised": "^7.1.3",
     "@types/node": "^14.10.1",
-    "firebase-admin": "^8.13.0",
-    "firebase-functions": "^3.11.0",
+    "@types/uuid": "^8.3.0",
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2",
     "mocha": "^8.1.3"
   },
   "devDependencies": {
