--- a/firebaseFunctions/functions/package.json
+++ b/firebaseFunctions/functions/package.json
@@ -8,7 +8,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha --require ts-node/register --colors ./test/**/*.test.ts --recursive"
+    "test": "mocha --timeout 3000 --require ts-node/register --colors ./test/**/*.test.ts --recursive"
   },
   "engines": {
     "node": "12"
@@ -16,21 +16,21 @@
   "main": "lib/index.js",
   "dependencies": {
     "@types/chai-as-promised": "^7.1.3",
-    "@types/node": "^14.10.1",
+    "@types/node": "^14.14.37",
     "@types/uuid": "^8.3.0",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
-    "mocha": "^8.1.3"
+    "mocha": "^8.3.2"
   },
   "devDependencies": {
     "@types/expect": "^24.3.0",
-    "@types/mocha": "^8.0.3",
-    "chai": "^4.2.0",
+    "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "firebase-functions-test": "^0.2.2",
-    "ts-node": "^9.0.0",
-    "tslint": "^5.12.0",
-    "typescript": "^3.9.7"
+    "firebase-functions-test": "^0.2.3",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.2.3"
   },
   "private": true
 }
