--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@material/circular-progress": "^10.0.0",
     "@material/fab": "^10.0.0",
     "@material/icon-button": "^10.0.0",
     "@polymer/app-layout": "^3.1.0",
