--- a/firebaseFunctions/functions/package.json
+++ b/firebaseFunctions/functions/package.json
@@ -20,7 +20,8 @@
     "@types/uuid": "^8.3.0",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
-    "mocha": "^8.3.2"
+    "mocha": "^8.3.2",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@types/expect": "^24.3.0",
